# tooluse

./: .gitignore  .lefthook.yml  README.md  config.toml  pyproject.toml
demo/: Dockerfile  calc_server.py  database_example.py  export_schema.py  main.py  test_calc.py  test_db.py  test_integration.py  test_sse.py
demo/servers/: calc_server.py  database_example.py  db_server.py  sse_server.py
src/llm_tooluse/: __init__.py  llm.py  main.py  mcp_adapter.py  mcp_client.py  schemagenerators.py  settings.py  tools.py
src/tooluse/: __init__.py  calculator.py  llm.py  main.py  ollama_tool.py  schemagenerators.py  settings.py  tools.py
tests/: conftest.py  test_llmschema_integration.py  test_schemagenerators.py  test_settings.py  test_toolregistry.py
tests/data/: valid_config.toml
